[gd_scene load_steps=23 format=3 uid="uid://ckovbok4v0v3k"]

[ext_resource type="Script" path="res://scenes/node_3d.gd" id="1_if0am"]
[ext_resource type="PackedScene" uid="uid://72vvavpsasub" path="res://scenes/discup.tscn" id="1_ymtni"]
[ext_resource type="PackedScene" uid="uid://df6m1ppw0jfho" path="res://scenes/support.tscn" id="2_8sjqe"]
[ext_resource type="PackedScene" uid="uid://cncrumfgt0d4a" path="res://scenes/number_1.tscn" id="3_siboc"]
[ext_resource type="PackedScene" uid="uid://dqdt3aq7dxw45" path="res://scenes/number_2.tscn" id="4_bdkv6"]
[ext_resource type="PackedScene" uid="uid://7ughu68pcpfl" path="res://scenes/number_3.tscn" id="5_klvvv"]
[ext_resource type="PackedScene" uid="uid://cgvpdgf2a32vr" path="res://scenes/number_0.tscn" id="6_h0mvs"]
[ext_resource type="PackedScene" uid="uid://cgiwcyrfo7m07" path="res://scenes/number_4.tscn" id="7_qgil3"]
[ext_resource type="PackedScene" uid="uid://brqnyph2kxwf4" path="res://scenes/number_5.tscn" id="8_h551p"]
[ext_resource type="PackedScene" uid="uid://cn1a5cdhn3vqy" path="res://scenes/number_6.tscn" id="9_7rrph"]
[ext_resource type="PackedScene" uid="uid://tour5yqu7his" path="res://scenes/number_7.tscn" id="10_44jta"]
[ext_resource type="PackedScene" uid="uid://dmtd20njls6y5" path="res://scenes/number_8.tscn" id="11_ns3hi"]
[ext_resource type="PackedScene" uid="uid://dbcsaw0ddccyi" path="res://scenes/number_9.tscn" id="12_0awt0"]
[ext_resource type="PackedScene" uid="uid://ddko6jhxt2mn5" path="res://scenes/discdown.tscn" id="13_5wrql"]
[ext_resource type="PackedScene" uid="uid://b2jegrcv6v8ng" path="res://scenes/front.tscn" id="15_o2rgm"]
[ext_resource type="PackedScene" uid="uid://d0skbnuqtnr6t" path="res://scenes/back.tscn" id="16_n61pw"]
[ext_resource type="PackedScene" uid="uid://c87qqym5g52ik" path="res://scenes/glass.tscn" id="17_8iinp"]
[ext_resource type="PackedScene" uid="uid://dcakdu1xtj3fs" path="res://scenes/plug.tscn" id="18_yg4ef"]
[ext_resource type="Script" path="res://scenes/cam_gimbal.gd" id="19_1ewlw"]
[ext_resource type="Script" path="res://scenes/camera_3d.gd" id="20_v3b06"]

[sub_resource type="BoxMesh" id="BoxMesh_ytpx2"]
size = Vector3(10, 0.2, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cp5at"]
albedo_color = Color(0.16735, 0.644165, 0.751623, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_if0am")

[node name="discup" parent="." instance=ExtResource("1_ymtni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200694, -0.296645, 0.301955)

[node name="support" parent="." instance=ExtResource("2_8sjqe")]

[node name="number_0" parent="." instance=ExtResource("6_h0mvs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.230428, 0, 0.0782171)

[node name="number_1" parent="." instance=ExtResource("3_siboc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00387806, 0, -0.00439495)

[node name="number_2" parent="." instance=ExtResource("4_bdkv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.183694, 0, 0.160631)

[node name="number_3" parent="." instance=ExtResource("5_klvvv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15727, 0, 0.315943)

[node name="number_4" parent="." instance=ExtResource("7_qgil3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0386385, 0, 0.395157)

[node name="number_5" parent="." instance=ExtResource("8_h551p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.194574, 0, 0.536906)

[node name="number_6" parent="." instance=ExtResource("9_7rrph")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.192167, 0, 0.698843)

[node name="number_7" parent="." instance=ExtResource("10_44jta")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.393889, 0, 0.609997)

[node name="number_8" parent="." instance=ExtResource("11_ns3hi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.263601, 0, 0.458109)

[node name="number_9" parent="." instance=ExtResource("12_0awt0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24859, 0, 0.239381)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.62415, 0)

[node name="discdown" parent="." instance=ExtResource("13_5wrql")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.195, -0.751763, 0.28691)

[node name="front" parent="." instance=ExtResource("15_o2rgm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.197339, 0.485213, 0.726323)

[node name="back" parent="." instance=ExtResource("16_n61pw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.217441, 0.676119, 0)

[node name="glass" parent="." instance=ExtResource("17_8iinp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.195302, 0, 0.28029)

[node name="plug" parent="." instance=ExtResource("18_yg4ef")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.17, -1.525, 0.265)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.774519, -0.224144, -0.591506, 0.612372, 0.5, 0.612372, 0.158494, -0.836516, 0.524519, -6.12483, 1.33143, 1.17154)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 15.0
offset_top = 561.0
offset_right = 414.0
offset_bottom = 631.0
text = "Display a number: [0]...[9]
Move camera:  [Q] Left / [D] Right / [S] Down / [Z] Up
"

[node name="cam_gimbal" type="Node3D" parent="."]
script = ExtResource("19_1ewlw")

[node name="Camera3D" type="Camera3D" parent="cam_gimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.676916, 4.49922)
script = ExtResource("20_v3b06")

[node name="Node3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.327, -2.37, 0.12)
mesh = SubResource("BoxMesh_ytpx2")
surface_material_override/0 = SubResource("StandardMaterial3D_cp5at")

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(-0.0214036, -0.79522, 0.605944, -0.0280718, 0.606322, 0.794724, -0.999377, 0, -0.0353007, 5.86657, 3.35152, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.22907, 0)
